# RIGHTWATT-IOT

./: CMakeLists.txt  README.md  Readme.md  SETUP.md  amqp.c  amqp.h  azure_event_hub.c  azure_event_hub.h  build.sh  create_log.c  create_log.h  jsonParser.c  jsonParser.h  log_create.h  main.c  readModbus.c  readModbus.h  read_configuration.c  read_configuration.h  read_meters_address.c  read_meters_address.h  rightWattConf.c  rightWattConf.h  rightwatts_main.c  rightwattsconf.cfg
lib_azure_event_hub/c/testtools/eventhub_test/inc/: eventhub_account.h
lib_json/: CMakeLists.txt  buf.c  buf.h  jsmn.c  json.c  json.h  log.c
lib_modbus/src/: modbus.c
libamqp/c/: CMakeLists.txt
libjsonparser/: json.c  json.h  temp.json
libmodbus/: .cproject  .project  CMakeLists.txt
libmodbus/src/: config.h  modbus-data.c  modbus-private.h
